# python-package-copier-template

./: .git-cliff.toml  .pre-commit-config.yaml  CHANGELOG.md  README.md  copier.yml  justfile  mkdocs.yml  noxfile.py  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: changelog.yml  publish-release.yml  release.yml  tests.yml
docs/: contributing.md  index.md
docs/pages/: contributing.md  quickstart.md  reference.md
template/: .copier-answers.yml.jinja  .git-cliff.toml.jinja  .gitignore  .gitignore.jinja  .pre-commit-config.yaml.jinja  .readthedocs.yml.jinja  CHANGELOG.md.jinja  README.md.jinja  justfile.jinja  mkdocs.yml.jinja  noxfile.py.jinja  pyproject.toml.jinja
template/.github/workflows/: changelog.yml.jinja  publish-release.yml.jinja  release.yml.jinja
template/.github/{% if include_actions %}workflows{% endif %}/: changelog.yml.jinja  nightly.yml.jinja  pr-title.yml.jinja  tests.yml.jinja
template/docs/: contributing.md.jinja  examples.md.jinja  hooks.py.jinja  index.md.jinja
template/docs/pages/: api-reference.md.jinja  contributing.md.jinja  getting-started.md.jinja  user-guide.md.jinja  {% if include_examples %}examples.md{% endif %}.jinja
template/scripts/: copy_markdown_docs.py  {% if include_examples %}export_marimo_examples.py{% endif %}
template/tests/: test_examples.py.jinja
tests/: conftest.py  test_docs_content.py  test_hooks.py  test_template.py  test_template_options.py
